# MetroEx-Tools

./: .clang-format  .gitignore  CMakeLists.txt  MetroEX.sln  MetroEX.vcxproj  MetroEX.vcxproj.filters  README.md  res.rc
MetroEXControls/src/: FilterableTreeView.Designer.cs  FilterableTreeView.cs
MetroExplorer/: Editor.cpp  Editor.h  MetroExplorer.cpp  MetroExplorer.rc  MetroExplorer.vcxproj  MetroExplorer.vcxproj.filters  Resource.h
MetroExplorer/pch/: stdafx.h
MetroExplorer/ui/: ui.cpp  ui.h  ui_filesystem.cpp  ui_fileviewer.cpp  ui_mainmenu.cpp  ui_scriptviewer.cpp
libs/: CMakeLists.txt
libs/MetroEXControls/: MetroEXControls.csproj
libs/lz4/: CMakeLists.txt
src/: Application.cpp  camera.cpp  camera.h  dds_utils.cpp  dds_utils.h  hashing.cpp  log.cpp  log.h  mex_settings.cpp  mex_settings.h  mycommon.h  mymath.h
src/metro/: Config.cpp  Config.h  LevelSpawn.cpp  LevelSpawn.h  MetroBinArchive.cpp  MetroBinArchive.h  MetroCompression.cpp  MetroConfigDatabase.cpp  MetroConfigDatabase.h  MetroConfigNames.h  MetroDatabases.h  MetroFileSystem.cpp  MetroFileSystem.h  MetroFonts.cpp  MetroFonts.h  MetroLevel.cpp  MetroLevel.h  MetroLocalization.cpp  MetroLocalization.h  MetroMaterialsDatabase.cpp  MetroMaterialsDatabase.h  MetroModel.cpp  MetroModel.h  MetroMotion.cpp  MetroMotion.h  MetroReflection.cpp  MetroReflection.h  MetroReflectionBinary.inl  MetroSkeleton.cpp  MetroSkeleton.h  MetroTexture.cpp  MetroTexture.h  MetroTexturesDatabase.cpp  MetroTexturesDatabase.h  MetroTypedStrings.cpp  MetroTypedStrings.h  MetroTypes.h  MetroWeaponsDatabase.cpp  MetroWeaponsDatabase.h  VFXReader.cpp  (+1 more)
src/shaders/: ModelViewerPS.hlsl  (+3 more)
tools/textures_editor/: .main.cpp.swp  CMakeLists.txt  main.cpp
(+97 files in other folders)
