CMAKE_MINIMUM_REQUIRED (VERSION 3.4)
PROJECT (lz4)

SET (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET (SOURCES
        ${SRC_DIR}/lz4.c
        ${SRC_DIR}/lz4hc.c
    )

SET (HEADERS
        ${SRC_DIR}/lz4.h
        ${SRC_DIR}/lz4hc.h
    )


ADD_LIBRARY (lz4 STATIC ${SOURCES} ${HEADERS})
TARGET_INCLUDE_DIRECTORIES (lz4 PUBLIC ${SRC_DIR})
